# connector/restapi/server/operations/medchain/ws_proxy.go
@@ -1,0 +1,139 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package medchain
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the generate command
+
+import (
+	"net/http"
+
+	"github.com/go-openapi/runtime/middleware"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+
+	"github.com/ldsec/medco/connector/restapi/models"
+)
+
+// WsProxyHandlerFunc turns a function with the right signature into a ws proxy handler
+type WsProxyHandlerFunc func(WsProxyParams, *models.User) middleware.Responder
+
+// Handle executing the request and returning a response
+func (fn WsProxyHandlerFunc) Handle(params WsProxyParams, principal *models.User) middleware.Responder {
+	return fn(params, principal)
+}
+
+// WsProxyHandler interface for that can handle valid ws proxy params
+type WsProxyHandler interface {
+	Handle(WsProxyParams, *models.User) middleware.Responder
+}
+
+// NewWsProxy creates a new http.Handler for the ws proxy operation
+func NewWsProxy(ctx *middleware.Context, handler WsProxyHandler) *WsProxy {
+	return &WsProxy{Context: ctx, Handler: handler}
+}
+
+/*WsProxy swagger:route GET /medchain/ws medchain wsProxy
+
+WebSocket endpoint that proxies communications to the associated MedChain node only if authorized.
+
+*/
+type WsProxy struct {
+	Context *middleware.Context
+	Handler WsProxyHandler
+}
+
+func (o *WsProxy) ServeHTTP(rw http.ResponseWriter, r *http.Request) {
+	route, rCtx, _ := o.Context.RouteInfo(r)
+	if rCtx != nil {
+		r = rCtx
+	}
+	var Params = NewWsProxyParams()
+
+	uprinc, aCtx, err := o.Context.Authorize(r, route)
+	if err != nil {
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+	if aCtx != nil {
+		r = aCtx
+	}
+	var principal *models.User
+	if uprinc != nil {
+		principal = uprinc.(*models.User) // this is really a models.User, I promise
+	}
+
+	if err := o.Context.BindValidRequest(r, route, &Params); err != nil { // bind params
+		o.Context.Respond(rw, r, route.Produces, route, err)
+		return
+	}
+
+	res := o.Handler.Handle(Params, principal) // actually handle the request
+
+	o.Context.Respond(rw, r, route.Produces, route, res)
+
+}
+
+// WsProxyDefaultBody ws proxy default body
+//
+// swagger:model WsProxyDefaultBody
+type WsProxyDefaultBody struct {
+
+	// message
+	Message string `json:"message,omitempty"`
+}
+
+// Validate validates this ws proxy default body
+func (o *WsProxyDefaultBody) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (o *WsProxyDefaultBody) MarshalBinary() ([]byte, error) {
+	if o == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(o)
+}
+
+// UnmarshalBinary interface implementation
+func (o *WsProxyDefaultBody) UnmarshalBinary(b []byte) error {
+	var res WsProxyDefaultBody
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*o = res
+	return nil
+}
+
+// WsProxyForbiddenBody ws proxy forbidden body
+//
+// swagger:model WsProxyForbiddenBody
+type WsProxyForbiddenBody struct {
+
+	// message
+	Message string `json:"message,omitempty"`
+}
+
+// Validate validates this ws proxy forbidden body
+func (o *WsProxyForbiddenBody) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (o *WsProxyForbiddenBody) MarshalBinary() ([]byte, error) {
+	if o == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(o)
+}
+
+// UnmarshalBinary interface implementation
+func (o *WsProxyForbiddenBody) UnmarshalBinary(b []byte) error {
+	var res WsProxyForbiddenBody
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*o = res
+	return nil
+}
